--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ tmp/
 local.properties
 .settings/
 .loadpath
+.classpath
+.project
 .recommenders
 
 # External tool builders
@@ -107,3 +109,6 @@ buildNumber.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,eclipse
 /.idea/
+
+
+librairie/src/main/resources/db\.properties
