--- a/librairie/pom.xml
+++ b/librairie/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>2.3.2.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
