--- a/librairie/src/main/resources/db.properties
+++ b/librairie/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 # databaseLibrarie properties
 db.driver=org.mariadb.jdbc.Driver
 db.url=jdbc:mysql\://localhost\:3306/librairie
-db.user=root
-db.password=root
+db.user=cda_libraire
+db.password=pwd
