--- a/librairie/pom.xml
+++ b/librairie/pom.xml
@@ -71,6 +71,12 @@
 			<artifactId>spring-orm</artifactId>
 			<version>5.2.8.RELEASE</version>
 		</dependency>
+		
+		   <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+    </dependency>
 
 		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 		<dependency>
