--- a/librairie/pom.xml
+++ b/librairie/pom.xml
@@ -13,7 +13,8 @@
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
-
+		<spring.cda>5.2.8.RELEASE</spring.cda>
+		<spring.security>5.3.3.RELEASE</spring.security>
 	</properties>
 
 	<dependencies>
@@ -25,14 +26,21 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>${spring.security}</version>
+        </dependency>
+        
 <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>5.2.8.RELEASE</version>
+			<version>${spring.cda}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-
+		
+        
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -63,13 +71,13 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>5.2.8.RELEASE</version>
+			<version>${spring.cda}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>5.2.8.RELEASE</version>
+			<version>${spring.cda}</version>
 		</dependency>
 		
 		   <dependency>
@@ -96,7 +104,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>5.2.8.RELEASE</version>
+			<version>${spring.cda}</version>
 			<scope>test</scope>
 		</dependency>
 
